--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
-<div id="app">{{html|safe}}</div>
+<div id="app" class="app-container">{{html|safe}}</div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/vendor.js"></script>
 <script src="/js/vendor.bundle.js"></script>
