--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -54,6 +54,51 @@ body{
   margin-left: 60px;
 }
 
+.page-header {
+    margin-top: 15px;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+
+.form-signin .checkbox {
+  font-weight: normal;
+}
+
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 .app-container,.app-content {
   display: flex;
   flex: 1;
@@ -157,7 +202,7 @@ body{
 }
 
 .sidebar-header { 
-  line-height: 34px;
+  line-height: 40px;
   font-size: 18px;
   padding: 0 12px;
 }
