--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -49,9 +49,13 @@ html, body {
   margin: 0px;
 }
 
-body{
+body {
   display: flex;
   margin-left: 60px;
+}
+
+.page-header {
+  margin-top: 10px;
 }
 
 .app-container,.app-content {
