--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -53,11 +53,7 @@ body {
   display: flex;
   margin-left: 60px;
 }
-.app-container,.app-content {
-  display: flex;
-  flex: 1;
-}
-.main-container {
+.app-container,.app-content,.main-container  {
   display: flex;
   flex: 1;
 }
@@ -71,6 +67,7 @@ body {
 }
 .page-header {
     margin-top: 15px;
+    margin-bottom: 8px;
 }
 
 /* tool */
@@ -236,6 +233,7 @@ body {
   font-size: 16px;
   font-weight: 200;
   line-height: 20px;
+  padding: 12px 0;
 }
 .group-header {
   padding: 5px 0px;
@@ -260,7 +258,7 @@ body {
   flex: 1;
   line-height: 30px;
 }
-.entry-meta > span {
+.entry-tags > span {
   background: #ecf0f1;
   border-radius: 2px;
   padding: 4px 10px;
