--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -52,6 +52,8 @@ html, body {
 body {
   display: flex;
   margin-left: 60px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .app-container,.app-content,.main-container  {
   display: flex;
@@ -59,6 +61,15 @@ body {
 }
 .main-content {
   flex: 1;
+  display: flex;
+}
+.flex-verticle {
+  display: flex;
+  flex-direction: column;
+}
+.flex-scroll {
+  flex: 1;
+  overflow: scroll;
 }
 
 /* fix */
@@ -66,8 +77,8 @@ body {
   color: #b9b9b9;
 }
 .page-header {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin: 10px 0px;
+    padding-bottom: 10px;
 }
 
 /* ui animate */
@@ -286,4 +297,23 @@ body {
   font-size: 13px;
   white-space: nowrap;
   margin-left: 8px;
+}
+
+/*form*/
+.smart-form {
+  display: flex;
+  flex-direction: column;
+}
+.smart-form .form-item {
+  display: flex;
+  padding: 5px 0px;
+}
+.form-item > .item-label {
+  width: 50px;
+}
+.form-item > .item-content {
+  flex: 1;
+}
+.form-title {
+  font-weight: bolder;
 }
