--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -63,9 +63,15 @@ body {
   flex: 1;
   display: flex;
 }
-.flex-verticle {
+.flex {
   display: flex;
+  flex: 1;
+}
+.flex.flex-verticle {
   flex-direction: column;
+}
+.flex.flex-horizontal {
+  flex-direction: row;
 }
 .flex-scroll {
   flex: 1;
@@ -208,7 +214,7 @@ body {
 
 /* .searchbar */
 .searchbar {
-  padding: 8px 12px;
+  padding: 10px 12px;
 }
 .searchbar > i.glyphicon {
   position: absolute;
@@ -316,4 +322,22 @@ body {
 }
 .form-title {
   font-weight: bolder;
+}
+
+/*overlay*/
+.overlay {
+  position: fixed;
+  left: -100%;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  .opacity(0);
+  z-index: 1050;
+  background-color: rgba(0, 0, 0, 0.2);
+  .transition(opacity 0.4s);
+
+  &.active {
+    left: 0;
+    .opacity(1);
+  }
 }
