--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -332,7 +332,7 @@ body {
   width: 100%;
   height: 100%;
   .opacity(0);
-  z-index: 1050;
+  z-index: 1100;
   background-color: rgba(0, 0, 0, 0.2);
   .transition(opacity 0.4s);
 
@@ -340,4 +340,9 @@ body {
     left: 0;
     .opacity(1);
   }
+}
+
+/*popbox*/
+.popbox {
+  position: absolute;
 }
