--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -327,22 +327,27 @@ body {
 /*overlay*/
 .overlay {
   position: fixed;
-  left: -100%;
   top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
-  .opacity(0);
   z-index: 1100;
-  background-color: rgba(0, 0, 0, 0.2);
-  .transition(opacity 0.4s);
-
-  &.active {
-    left: 0;
-    .opacity(1);
-  }
 }
 
 /*popbox*/
+.popbox-container {
+  display: none;
+  position: fixed;
+  z-index: 1100;
+  
+  &.active {
+    display: block;
+  }
+}
+
 .popbox {
   position: absolute;
+  background: #fff;
+  min-width: 240px;
+  box-shadow: 0 0 24px rgba(0,0,0,.18);
 }
