--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -5,6 +5,8 @@
 /*
  * Bootstrap overrides.
  */
+@link-hover-decoration: none;
+ 
 @text-color: #6a6a6a;
 @font-family-base: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 @link-color: #4e545f;
