--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -53,7 +53,6 @@ html, body {
 }
 body {
   display: flex;
-  margin-left: 60px;
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -159,9 +158,8 @@ body {
 
 /*nav bar*/
 .navbar-vertical-left {
-  position: fixed;
-  left: 0;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   width: 60px;
   border: none;
   border-radius: 0;
