--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -423,7 +423,7 @@ body {
   margin: 0;
 }
 .selector-list > li {
-  background-color: transparent;
+  margin: 1px 0;
 }
 .selector-list > li.active,
 .selector-list > li:hover {
