--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -354,6 +354,10 @@ body {
 .popbox-container {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1100;
   
   &.active {
