--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -132,6 +132,12 @@ body {
 .tag.tag-danger {
   background-color: #f1867e;
 }
+.tag.tag-info {
+  background-color: #5bc0de;
+}
+.tag.tag-warning {
+  background-color: #f0ad4e;
+}
 
 /* signin */
 .form-signin {
@@ -312,7 +318,6 @@ body {
   white-space: nowrap;
 }
 .entry-tags > span {
-  background: #ecf0f1;
   border-radius: 2px;
   padding: 4px 10px;
   font-size: 13px;
