--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -265,6 +265,7 @@ body {
 /* section */
 .section-header {
   padding: 0 12px;
+  margin-bottom: 1px;
   line-height: 40px;
 }
 .section-body {
@@ -273,6 +274,7 @@ body {
 }
 .section-item {
   padding-left: 40px;
+  margin-bottom: 1px;
   line-height: 40px;
 }
 .section-header:hover, .section-item.active, .section-item:hover {
