--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -138,6 +138,12 @@ body {
 .tag.tag-warning {
   background-color: #f0ad4e;
 }
+.tag .glyphicon {
+  color: #fff;
+}
+.tag.tag-default .glyphicon {
+  color: #b9b9b9;
+}
 
 /* signin */
 .form-signin {
@@ -321,7 +327,7 @@ body {
 }
 .entry-tags > span {
   border-radius: 2px;
-  padding: 4px 10px;
+  padding: 4px 6px;
   font-size: 13px;
   white-space: nowrap;
   margin-left: 8px;
