--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -340,9 +340,10 @@ body {
 }
 .smart-form .form-item {
   display: flex;
-  padding: 5px 0;
+  padding: 10px 0;
 }
 .form-item > .item-label {
+  font-weight: bolder;
   width: 50px;
 }
 .form-item > .item-content {
