--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -56,13 +56,12 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
-.app-container,.app-content,.main-container  {
+.app-container,.app-content,.main-container,.main-content  {
   display: flex;
   flex: 1;
 }
-.main-content {
-  flex: 1;
-  display: flex;
+.app-container {
+  min-width: 600px;
 }
 .flex {
   display: flex;
