--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -342,15 +342,16 @@ body {
   padding: 5px 0;
 }
 .form-item > .item-label {
+  font-size: 14px;
   font-weight: bolder;
-  width: 50px;
+  padding: 6px 4px;
+  width: 60px;
 }
 .form-item > .item-content {
   flex: 1;
 }
-.form-title {
+.form-control-static {
   display: block;
-  font-size: 18px;
 }
 
 /*overlay*/
@@ -382,7 +383,7 @@ body {
   position: absolute;
   z-index: 1101;
   background: #fff;
-  min-width: 280px;
+  min-width: 200px;
   box-shadow: 0 0 24px rgba(0,0,0,.18);
 }
 
