--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -350,6 +350,9 @@ body {
 .form-item > .item-content {
   flex: 1;
 }
+.form-item .form-title {
+  font-size: 18px;
+}
 .form-control-static {
   display: block;
 }
