--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,6 +1,7 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
 @import '../../bower_components/toastr/toastr';
 @import (less) '../../bower_components/magnific-popup/dist/magnific-popup.css';
+@import (less) '../../node_modules/react-big-calendar/lib/css/react-big-calendar.css';
 
 /*
  * Bootstrap overrides.
@@ -480,4 +481,12 @@ body {
 .selectable-text {
   display: inline-block;
   padding-right: 10px;
+}
+
+.calendar {
+  padding-top: 10px;
+}
+
+.rbc-now {
+  background-color: #fac732;
 }
