--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -383,10 +383,13 @@ body {
   padding: 0;
 }
 .pad-list .pad-item {
-  background: #fbfbfb;
+  background: #fff;
   padding: 5px;
   margin-bottom: 6px;
   cursor: pointer;
+}
+.pad-list .pad-item:hover {
+  background: #fbfbfb;
 }
 
 /*form*/
