add flash fix auth

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -111,6 +111,10 @@ body {
 .quickadd {
   margin: 10px 0;
 }
+.validation-summary-errors { color: #b94a48; }
+.validation-summary-valid { display: none; }
+ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
+
 
 /* ui animate */
 .animated {
