--- a/views/login.html
+++ b/views/login.html
@@ -24,6 +24,13 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <div class="validation-summary-errors">
+        <ul>
+        {% for item in error %}
+          <li>{{item}}</li>
+        {% endfor %}
+        </ul>
+      </div>
     </form>
   </div>
   <script src="/js/vendor.js"></script>
