--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -114,13 +114,16 @@ body {
   margin: 8px 0;
   float: left;
 }
+.progress {
+  height: 12px;
+  background: #fff;
+}
 .quickadd {
   margin: 10px 0;
 }
 .validation-summary-errors { color: #b94a48; }
 .validation-summary-valid { display: none; }
 ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
-
 
 /* ui animate */
 .animated {
@@ -560,7 +563,7 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 
 .well-wrap {
   border-radius: 3px;
-  background: #f4f4f4;
+  background: #f7f7f9;
   padding: 10px;
   display: flex;
   flex-direction: column;
