--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -107,7 +107,7 @@ body {
 }
 .page-header {
     padding: 10px 0;
-    margin: 0;
+    margin: 0 0 10px 0;
 }
 .page-header h2 {
   font-size: 18px;
@@ -117,9 +117,10 @@ body {
 .progress {
   height: 12px;
   background: #fff;
+  margin-bottom: 10px;  
 }
 .quickadd {
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 .validation-summary-errors { color: #b94a48; }
 .validation-summary-valid { display: none; }
@@ -371,6 +372,10 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   line-height: 30px;
   white-space: nowrap;
 }
+.item-title > input[type="checkbox"] {
+  margin-top: 10px;
+  margin-right: 8px;
+}
 .item-title > form {
   flex: 1;
 }
@@ -407,6 +412,9 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 }
 .pad-list .pad-item:hover {
   background: #fbfbfb;
+}
+.pad-list .pad-item .item-tags {
+  margin-left: 20px;
 }
 
 /*form*/
