任务分工作包

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -601,3 +601,7 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   margin-left: 5px;
   margin-right: 10px;
 }
+
+.main-content .nav {
+  margin-bottom: 10px;
+}
