add task start end date

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -370,7 +370,7 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   display: flex;
   flex: 1;
   line-height: 30px;
-  white-space: nowrap;
+  white-space: pre-wrap;
 }
 .item-title > input[type="checkbox"] {
   margin-top: 10px;
