--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -13,7 +13,7 @@
 @link-color: #4e545f;
 @link-hover-color: #141718;
 
-@navbar-default-bg: #fff;
+//@navbar-default-bg: #fff;
 @navbar-default-link-color: #353f44;
 @navbar-default-link-hover-bg: #f6f7f7;
 @navbar-default-link-active-bg: #f6f7f7;
