--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -605,3 +605,7 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 .main-content .nav {
   margin-bottom: 10px;
 }
+
+.text-sm { 
+  font-size: 10px;
+}
