--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -606,6 +606,13 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   margin-bottom: 10px;
 }
 
-.text-sm { 
+.text-sm, .text-sm .form-control { 
   font-size: 10px;
+}
+.text-sm .form-control {
+  padding: 2px;
+  height: auto;
+}
+.nowrap {
+  white-space: nowrap;
 }
