--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -613,6 +613,24 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   padding: 2px;
   height: auto;
 }
+
 .nowrap {
   white-space: nowrap;
+}
+
+.text-info {
+  background-color: #23b7f5 !important;
+  color: #fff; 
+}
+.text-danger {
+  background-color: #f15051 !important;
+  color: #fff; 
+}
+.text-warning {
+  background-color: #fac732 !important; 
+  color: #fff; 
+}
+.text-success {
+  background-color: #27d24b !important; 
+  color: #fff; 
 }
