--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -154,6 +154,7 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   white-space: nowrap;
   margin-left: 8px;
   color: #fff;
+  background-color: #7266bb;
 }
 .tag:first-of-type {
   margin-left: 0;
@@ -341,7 +342,8 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   font-size: 16px;
   font-weight: 200;
   line-height: 20px;
-  padding: 12px 0;
+  padding: 0;
+  padding-bottom: 24px;
 }
 .group-list .group-header {
   padding: 5px 0;
