--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -621,18 +621,14 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 }
 
 .text-info {
-  background-color: #23b7f5 !important;
-  color: #fff; 
+  background-color: #d9edf7 !important;
 }
 .text-danger {
-  background-color: #f15051 !important;
-  color: #fff; 
+  background-color: #f2dede !important;
 }
 .text-warning {
-  background-color: #fac732 !important; 
-  color: #fff; 
+  background-color: #fcf8e3 !important; 
 }
 .text-success {
-  background-color: #27d24b !important; 
-  color: #fff; 
+  background-color: #dff0d8 !important; 
 }
