检查点可删除

--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -327,13 +327,13 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 .section a:hover {
   text-decoration: none;
 }
-.section a .action-icon {
+a .action-icon {
   position: absolute;
   right: 12px;
-  top: 13px;
+  top: 10px;
   color: transparent;
 }
-.section a:hover .action-icon {
+a:hover .action-icon {
   color: #b9b9b9;
 }
 
