--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -56,6 +56,7 @@ body {
   display: flex;
   overflow-x: hidden;
   overflow-y: hidden;
+  min-width: 1000px;
 }
 .app-container,.app-content,.main-container,.main-content  {
   display: flex;
