--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -412,6 +412,7 @@ a:hover .action-icon {
   list-style-type: none;
   font-size: 14px;
   padding: 0;
+  min-height: 30px;
 }
 .pad-list .pad-item {
   background: #fff;
