--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -234,13 +234,16 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   width: 100%;
   margin-bottom: 60px;
 }
+.navbar-vertical-left .navbar-content {
+  flex: 1;
+}
 .navbar-vertical-left a.navbar-brand {
   color: #fff;
 }
 .navbar-vertical-left .navbar-nav {
   width: 100%;
   height: 60%;
-  display: table;
+  display: block;
   margin: 0;
 }
 .navbar-vertical-left .navbar-nav:before,
@@ -248,11 +251,10 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
   display: none;
 }
 .navbar-vertical-left .navbar-nav > li {
-  display: table-row;
+  height: 60px;
   float: none;
 }
 .navbar-vertical-left .navbar-nav > li > a {
-  display: table-cell;
   vertical-align: middle;
 }
 .navbar-vertical-left {
@@ -274,6 +276,20 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 .navbar-vertical-left .navbar-nav > li > a > i {
   color: #ecf0f1;
   font-size: 28px;
+}
+.navbar-vertical-left .navbar-footer {
+  a {
+    display: block;
+    height: 48px;
+    width: 48px;
+    margin: 6px;
+    padding: 3px;
+    color: #fff;
+    border-radius: 24px;
+    background: #5bc0de;
+    line-height: 42px;
+    text-align: center;
+  }
 }
 
 /* .searchbar */
