--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -656,3 +656,46 @@ a:hover .action-icon {
 .text-success {
   background-color: #dff0d8 !important; 
 }
+
+.welcome-masthead {
+  padding: 40px;
+  background: #722f9d;
+  color: #fff;
+  text-align: center;
+}
+.welcome-masthead .logo{
+  margin: 20px;
+}
+.lead{
+  margin: 0 auto;
+}
+.welcome-features {
+  padding: 30px 0;
+  text-align: center;
+}
+.welcome-features .split > * {
+  border-right: solid 1px #e6e6e6;
+}
+.welcome-features .split > *:last-of-type {
+  border-right: none;
+}
+
+.article {
+  margin: auto 20px;
+}
+.markdown img {
+  max-width: 100%;
+}
+.comments {
+  margin-top: 60px;
+}
+.comments h3 {
+  padding-bottom: 12px;
+  border-bottom: solid 1px #f0ad4e;
+}
+.comments li {
+  border-bottom: solid 1px #e6e6e6;
+}
+.add-comment {
+  margin-top: 50px;
+}
