--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -663,6 +663,9 @@ a:hover .action-icon {
   color: #fff;
   text-align: center;
 }
+.welcome-masthead.orange {
+  background: #fac732;
+}
 .welcome-masthead .logo{
   margin: 20px;
 }
