--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -144,9 +144,10 @@ ul, menu, dir { list-style-type: none; text-indent: 0px; padding: initial; }
 }
 a .action-icon {
   position: absolute;
-  right: 12px;
-  top: 10px;
+  right: 8px;
+  top: 8px;
   color: transparent;
+  line-height: 18px;
 }
 a:hover .action-icon {
   color: #b9b9b9;
