--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -31,15 +31,22 @@
   background: #ad3a37;
   color: #fff;
 }
+.item-indicators li.success {
+  background: #76b480;
+  color: #fff;
+}
 .item-sub {
   display: block;
   line-height: 1.5;
   white-space: pre-wrap;
   font-weight: normal;
   font-size: 15px;
-  color: #999;
+  color: #aaa;
   padding: auto;
   margin: auto;
+}
+.item-sub a {
+  color: #aaa;
 }
 
 .item-title {
