--- a/app/stylesheets/list.less
+++ b/app/stylesheets/list.less
@@ -26,6 +26,7 @@
 }
 .item-indicators li small {
   display: block;
+  min-width: 32px;
 }
 .item-indicators li.error {
   background: #ad3a37;
@@ -35,12 +36,16 @@
   background: #76b480;
   color: #fff;
 }
+.item-indicators li.complete {
+  background: #999;
+  color: #fff;
+}
 .item-sub {
   display: block;
   line-height: 1.5;
   white-space: pre-wrap;
   font-weight: normal;
-  font-size: 15px;
+  font-size: 12px;
   color: #aaa;
   padding: auto;
   margin: auto;
