--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,5 +1,6 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
 @import '../../bower_components/toastr/toastr';
+@import '../../bower_components/editor.md/css/editormd.min.css';
 @import (less) '../../bower_components/magnific-popup/dist/magnific-popup.css';
 @import (less) '../../node_modules/react-big-calendar/lib/css/react-big-calendar.css';
 
