--- a/views/index.html
+++ b/views/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Working</title>
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"/>-->
+  <link rel="stylesheet" href="/editor.md/css/editormd.min.css" />
   <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
 <div id="app" class="app-container">{{html|safe}}</div>
 <!--<script src="/socket.io/socket.io.js"></script>-->
 <script src="/js/vendor.js"></script>
+<script src="/editor.md/editormd.min.js"></script>
 <script src="/js/vendor.bundle.js"></script>
 <script src="/js/bundle.js"></script>
 </body>
